# image-microservice

./: README.md  pyproject.toml
data/FireSTORM/effects/: effectsFS.json  poison.json
data/FireSTORM/icons/: burn-icon.json  effect-icon.json  icons.json  poison-icon.json
data/WildWags/characters/: cat1.json  cat2.json  dog1.json  dog2.json
data/WildWags/icons/: icons.json
data/WildWags/pets/: cat1.json  cat2.json  dog1.json  dog2.json
data/game1/effects/: burn.json  freeze.json
data/game1/icons/: freeze-icon.json
src/: image_processing.py  service.py
tests/: test_image_processing.py
