[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.scripts]
start = "src.service:main"

[project]
name = "image-microservice"
version = "0.1.0"
description = "Microservice that manages the processing and handling of sprite sheets and icons"
authors = [
    {name = "Antonella Gutierrez", email = "gutiea23@oregonstate.edu"},
    {name = "Cadin", email = "add-email@email.com"},
    {name = "Kayla", email = "add-email@email.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

